# exe-ai

./: .gitignore  README.md  exe.py  pyproject.toml
src/: __init__.py  config.py  main.py  session.py
src/core/: __init__.py  adk_adapters.py  coder.py  coder_agent.py  coordinator_agent.py  llm_interface.py  model_factory.py  models.py  router.py  router_agent.py  router_analytics.py  runner.py  tools.py
src/ingestion/: __init__.py  editor.py  scanner.py  watcher.py
src/interface/: __init__.py  console.py  repl.py  repl_adk.py
src/memory/: __init__.py  chunker.py  db.py  embedder.py  history.py  repo_context.py
src/utils/: __init__.py  model_selector.py
tests/: test_adk_integration.py  test_chunker.py  test_chunker_improvements.py  test_chunker_integration.py  test_cli.py  test_coder.py  test_config.py  test_context_integration.py  test_day8_polish.py  test_editor.py  test_focus_mode_integration.py  test_history.py  test_js_chunker.py  test_litellm_integration.py  test_model_factory.py  test_new_languages.py  test_repo_context.py  test_router.py  test_scanner.py  test_undo.py  test_universal_chunker.py  test_watcher.py
