[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exe-ai"
version = "1.4.0"
description = "Local-First Agentic Code Assistant - A Python-first AI pair programmer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Exe Team"}
]
keywords = ["ai", "code-assistant", "cli", "vector-database", "python"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "lancedb>=0.3.0",
    "watchdog>=3.0.0",
    "pathspec>=0.11.0",
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.73.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
exe = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
